Changes in Version 1-00.10
  o Several enhancements; fixed prewhitening
  o new naming for prewhitening
  o now automatic lag selection for prewhitening possible
Changes in Version 1-00.09
  o Added glm spectrum estimation and constant block bootstrap estimation
Changes in Version 1-00.08
  o Fixed bug that occurs when compiling documentation or using devtools::document() 
Changes in Version 1-00.07
  o Citation modified
  o Reference modified
Changes in Version 1-00.06
  o Added Citation
  o Added Copyrights
  o Change Description
Changes in Version 1-00.05
  o Deleted some spectral density estimator and added others
  o Added overlap batch-means estimator, mcmcse package wrapper
  o Added batch option in spectral density for smoother spectral density estimator.
Changes in Version 1-00.04
  o Corrected NAMESPACE
Changes in Version 1-00.03
  o Added psd package for another spectral density estimator
  o Added prewhitening otion for spectral density estimator 
Changes in Version 1-00.02
  o Fixed bug in Roxygen documentation
Changes in Version 1-00.01
  o First version released