@@ -1,6 +1,6 @@
 Package: nse
-Version: 1-00.10
-Date: 2016-04-13
+Version: 1-00.11
+Date: 2016-04-16
 Title: Numerical Standard Errors Computation in R
 Authors@R: c(person("Keven", "Bluteau", role = c("aut", "cre"),
              email = "Keven.Bluteau@unine.ch"),
