@@ -11,7 +11,6 @@ import(coda)
 import(mcmc)
 import(mcmcse)
 import(np)
-import(psd)
 import(sandwich)
 import(sapa)
 importFrom(Rcpp,evalCpp)
