@@ -1,3 +1,7 @@
+Changes in Version 1-00.11
+  o Fixed AR(p) prewhitening
+  o AR or ARIMA approximation for Andrews method
+  o PSD package dependency removed
 Changes in Version 1-00.10
   o Several enhancements; fixed prewhitening
   o new naming for prewhitening
